2025-11-16 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c,
  	  src/mos6502/main.c:
  	  Implement 8-bit rotate with constant.

2025-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge undefined branch.

2025-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCutil.c,
	  support/regression/tests/idf_ucn_utf8.c:
	  Update identifier check for current (git master branch as of 2025-11-16) libu8ident.

2025-11-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: update some Rabbit related paths

2025-11-15 Janko Stamenović

	* sdas/as6500/r6500.h
	  sdas/as6500/r65adr.c
	  sdas/as6500/r65mch.c
	  sdas/as6500/r65pst.c
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: as6500

2025-11-15 Janko Stamenović

	* sdas/as6808/m08adr.c
	  sdas/as6808/m08mch.c
	  sdas/as6808/m08pst.c
	  sdas/as6808/m6808.h
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: as6808

2025-11-15 Janko Stamenović

	* sdas/as8051/i51adr.c
	  sdas/as8051/i51mch.c
	  sdas/as8051/i51pst.c
	  sdas/as8051/i8051.h
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: as8051

2025-11-15 Janko Stamenović

	* sdas/as8xcxxx/ds8.h
	  sdas/as8xcxxx/ds8adr.c
	  sdas/as8xcxxx/ds8mch.c
	  sdas/as8xcxxx/ds8pst.c
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: as8xcxxx

2025-11-15 Janko Stamenović

	* sdas/asstm8/stm8.h
	  sdas/asstm8/stm8adr.c
	  sdas/asstm8/stm8mch.c
	  sdas/asstm8/stm8pst.c
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: asst8

2025-11-14 Janko Stamenović

	* sdas/asrab/rab.h
	  sdas/asrab/rabadr.c
	  sdas/asrab/rabmch.c
	  sdas/asrab/rabpst.c
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: asrab

2025-11-11 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/genrshift.c:
  	  Don't allow A to be a count register.
   	* src/mos6502/genrshift.c,