@@ -3,6 +3,10 @@
   	* src/mos6502/gen.c,
   	  src/mos6502/main.c:
   	  Implement 8-bit rotate with constant.
+  	* src/mos6502/genplus.c,
+  	  src/mos6502/genlshift.c,
+  	  src/mos6502/genrshift.c:
+  	  Fix unused variable warnings.
 
 2025-11-16 Philipp Klaus Krause <philipp@colecovision.eu>
 
